# njupt_wifi_login

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE.txt  README.md
.cargo/: config.toml
.github/workflows/: build.yml  deploy.yml
configuration/: Cargo.toml
configuration/src/: credential.rs  lib.rs  local_machine_data_protection.rs  login_config.rs  password.rs  win32_data_protection.rs
configurator/: Cargo.toml
configurator/i18n/en-US/: njupt_wifi_login_configurator.ftl
configurator/i18n/zh-CN/: njupt_wifi_login_configurator.ftl
configurator/src/: custom_font_scope.rs  i18n.rs  main.rs
configurator/src/launcher/: desktop_launcher.rs  launcher_trait.rs  mod.rs  windows_service_launcher.rs
configurator/win32_resource/: app.rc
core/: Cargo.toml  build.rs
core/src/: app_events.rs  app_main.rs  app_service_events.rs  credential.rs  dns_resolver.rs  linux_network_listener.rs  login.rs  main.rs  off_hours_cache.rs  smart_bind_to_interface_ext.rs  win32_network_connectivity_hint_changed.rs  windows_service_command.rs
core/src/dns/: mod.rs  resolver.rs  runtime.rs
core/src/network_changed/: linux.rs  mod.rs  windows.rs
core/win32_resource/: app.manifest  app.rc
src/: main.rs
