[package]
edition = "2021"
name = "njupt_wifi_login_configuration"
version = "0.4.5"

[dependencies]
byte-unit = {version = "5", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde_with = {version = "3", features = ["base64"]}
serde_yaml = "0.9"
thiserror = "1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_Security_Cryptography",
]
version = "0.56"

[target.'cfg(not(target_os = "windows"))'.dependencies]
machine-uid = "0.5"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hex = "0.4"
