[package]
edition = "2021"
name = "njupt_wifi_login_configurator"
version = "0.2.0"

[features]
default = ["windows-service-mode"]
windows-service-mode = ["windows-service", "runas"]

[dependencies]
auto-launch = "0.4.0"
druid = "0.8.3"
njupt_wifi_login_configuration = {path = "../configuration"}
once_cell = "1.18.0"
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9.22"
i18n-embed = {version= "0.14.1", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.7.0"
rust-embed = "8.2.0"
sysinfo = "0.30"
windows-service = { version = "0.6.0", optional = true }
# https://github.com/mitsuhiko/rust-runas/issues/13
runas = { version = "=1.0.0", optional = true }
