[package]
edition = "2021"
name = "njupt_wifi_login_configurator"
version = "0.4.2"

[features]
default = ["windows-service-mode"]
windows-service-mode = ["dep:windows-service", "dep:runas"]

[dependencies]
auto-launch = "0.5.0"
druid = "0.8.3"
njupt_wifi_login_configuration = {path = "../configuration"}
once_cell = "1"
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9"
i18n-embed = {version= "0.14.1", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.8.0"
rust-embed = "8.3.0"
sysinfo = "0.30"
windows-service = { version = "0.7", optional = true }
runas = { version = "1.2.0", optional = true }
include-bytes-zstd = "0.1.0"

[build-dependencies]
embed-resource = "2.4"
