[package]
edition = "2021"
name = "njupt_wifi_login"
version = "0.1.3"

[dependencies]
base64 = "0.21.2"
chrono = "0.4.26"
clap = {version = "4.3.10", features = ["derive"]}
hyper = {version = "0.14.27", default-features = false}
log = "0.4"
log4rs = "1.2"
njupt_wifi_login_configuration = {path = "../configuration"}
once_cell = "1.18.0"
regex = "1"
reqwest = {version = "0.11.18", default-features = false}
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9.22"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
trust-dns-resolver = "0.22.0"

[dependencies.windows]
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
]
version = "0.48"
