[package]
edition = "2021"
name = "njupt_wifi_login"
version = "0.5.0"

[features]
default = ["windows-service-mode"]
windows-service-mode = ["dep:windows-service"]

[dependencies]
byte-unit = {version = "5", features = ["serde"]}
chrono = "0.4"
clap = {version = "4.5", features = ["derive"]}
display-error-chain = "0.2"
log = "0.4"
log4rs = { version = "1.3", default-features = false, features = [
  "rolling_file_appender",
  "compound_policy",
  "size_trigger",
  "fixed_window_roller",
] }
network-interface = "2"
njupt_wifi_login_configuration = {path = "../configuration"}
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
  "http2",
] }
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
hickory-proto = "0.24"
hickory-resolver = "0.24"
windows-service = { version = "0.7", optional = true }
futures-util = "0.3"

[build-dependencies]
embed-resource = "2.4"

[target.'cfg(target_os = "windows")'.dependencies.windows]
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
  "Win32_UI_WindowsAndMessaging",
]
version = "0.56"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
rtnetlink = "0.14"
netlink-sys = "0.8"
netlink-packet-core = "0.7"
netlink-packet-route = "0.19"
